--- a/src/index.html
+++ b/src/index.html
@@ -2,22 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <title>JS Homework</title>
+    <link rel="stylesheet" href="/css/styles.css" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
-
+    
     <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
-    </main>
-
-    <load src="./partials/footer.html" />
-
-    <script type="module" src="main.js"></script>
+			<div class="container"><load src="1-gallery.html" /></div>
+			<div class="container"><load src="2-form.html" /></div>
+			
+		</main>
+    
+		
+    <script type="module" src="/js/1-gallery.js"></script>
   </body>
 </html>
