--- a/src/index.html
+++ b/src/index.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS Homework</title>
-    <link rel="stylesheet" href="/css/styles.css" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="stylesheet" href="./css/styles.css" />
+		<link rel="icon" type="image/svg+xml" href="./favicon.svg" />
   </head>
   <body>
     
     <main>
-			<div class="container"><load src="1-gallery.html" /></div>
-			<div class="container"><load src="2-form.html" /></div>
+			<div class="container">
+				<load src="./1-gallery.html" />
+			</div>
+			<div class="container">
+				<load src="./1-gallery.html" />
+			</div>
 			
 		</main>
     
 		
-    <script type="module" src="/js/1-gallery.js"></script>
+    <script type="module" src="./js/1-gallery.js"></script>
+		<script type="module" src="./js/2-form.js"></script>
   </body>
 </html>
