--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 				<load src="/1-gallery.html" />
 			</div>
 			<div class="container">
-				<load src="/1-gallery.html" />
+				<load src="/2-form.html" />
 			</div>
 			
 		</main>
