--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -1,2 +1,6 @@
-	<ul class="gallery"></ul>
+	<div class="container">
+		<ul class="gallery">
 
+		</ul>
+	</div>
+<script type="module" src="/js/1-gallery.js"></script>
