--- a/src/2-form.html
+++ b/src/2-form.html
@@ -1,8 +1,11 @@
-<form class="feedback-form" autocomplete="off">
-	<label> Email <input type="email" name="email" autofocus placeholder="Type area"/>
-	</label>
-	<label> Message <textarea name="message" placeholder="Type area"></textarea>
-	</label>
-	<button type="submit">Submit</button>
-</form>
+<div class="container">
+	<form class="feedback-form" autocomplete="off">
+		<label> Email <input type="email" name="email" autofocus placeholder="Type area"/>
+		</label>
+		<label> Message <textarea name="message" placeholder="Type area"></textarea>
+		</label>
+		<button type="submit">Submit</button>
+	</form>
+</div>
 
+<script type="module" src="/js/2-form.js"></script>
