--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,7 @@
 				<load src="/2-form.html" />
 			
 		</main>
-    
-
-    
-		
+		<script type="module" src="/js/1-gallery.js"></script>
+		<script type="module" src="/js/2-form.js"></script>
   </body>
 </html>
