--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,12 @@
   <body>
     
     <main>
-
-				<load src="/1-gallery.html" />
-
-				<load src="/2-form.html" />
-			
+			<div class="container">
+				<div class="gallery"></div>
+				<div class="form-container"></div>
+			</div>
 		</main>
+		<script type="module" src="/main.js"></script>
 		<script type="module" src="/js/1-gallery.js"></script>
 		<script type="module" src="/js/2-form.js"></script>
   </body>
