--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,16 @@
   <body>
     
     <main>
+			
 			<div class="container">
-				<div class="gallery"></div>
-				<div class="form-container"></div>
+				<div id="gallery-container"></div>
+			</div>
+			<div class="container">
+				<div id="form-container"></div>
 			</div>
 		</main>
 		<script type="module" src="/main.js"></script>
-		<script type="module" src="/js/1-gallery.js"></script>
-		<script type="module" src="/js/2-form.js"></script>
+		
+
   </body>
 </html>
