--- a/src/2-form.html
+++ b/src/2-form.html
@@ -1,10 +1,9 @@
 <form class="feedback-form" autocomplete="off">
-	<label> Email <input type="email" name="email" autofocus />
+	<label> Email <input type="email" name="email" autofocus placeholder="Type area"/>
 	</label>
-	<label> Message <textarea name="message" rows="8"></textarea>
+	<label> Message <textarea name="message" placeholder="Type area"></textarea>
 	</label>
 	<button type="submit">Submit</button>
 </form>
+
 <script type="module" src="/js/2-form.js"></script>
-
-
