--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,8 @@
   <body>
     
     <main>
-				<div id="gallery-container"></div>
-
-				<div id="form-container"></div>
+				<a href="/1-gallery.html"></a>
+				<a href="/2-form.html"></a>
 		</main>
 		<script type="module" src="/main.js"></script>
 		
