--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
   <body>
     
     <main>
-				<a href="/1-gallery.html">Gallery</a>
-				<a href="/2-form.html">Form</a>
+				<a href="./1-gallery.html">Gallery</a>
+				<a href="./2-form.html">Form</a>
 		</main>
 		<script type="module" src="/main.js"></script>
 		
