--- a/src/2-form.html
+++ b/src/2-form.html
@@ -4,17 +4,20 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Forn</title>
+	<link rel="stylesheet" href="/css/styles.css" />
 </head>
 <body>
-	<div class="container">
-		<form class="feedback-form" autocomplete="off">
-			<label> Email <input type="email" name="email" autofocus placeholder="Type area" />
-			</label>
-			<label> Message <textarea name="message" placeholder="Type area"></textarea>
-			</label>
-			<button type="submit">Submit</button>
-		</form>
-	</div>
+	<main>
+		<div class="container">
+			<form class="feedback-form" autocomplete="off">
+				<label> Email <input type="email" name="email" autofocus placeholder="Type area" />
+				</label>
+				<label> Message <textarea name="message" placeholder="Type area"></textarea>
+				</label>
+				<button type="submit">Submit</button>
+			</form>
+		</div>
+	</main>
 	<script src="/js/2-form.js"></script>
 </body>
 </html>
