--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,11 @@
   <body>
     
     <main>
-				<a href="./1-gallery.html">Gallery</a>
-				<a href="./2-form.html">Form</a>
+				<ul>
+					<li><a href="./1-gallery.html">Gallery</a></li>
+					<li><a href="./2-form.html">Form</a></li>
+				</ul>
+				
 		</main>
 		
 
