--- a/src/2-form.html
+++ b/src/2-form.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Forn</title>
+	<link rel="icon" type="image/svg+xml" href="#" />
 	<link rel="stylesheet" href="/css/styles.css" />
 </head>
 <body>
